--- a/前端自检.md
+++ b/前端自检.md
@@ -93,18 +93,6 @@
 
 
 2. instanceof的底层实现原理，手动实现一个instanceof
-```js
-function _instanceof(Fn, inst) {
-  let proto = inst.__proto__;
-  while (proto) {
-    if(proto === Fn.prototype) {
-      return true;
-    }
-    proto = proto.__proto__;
-  }
-  return false;
-}
-```
 
 
 4. 实现继承的几种方式以及他们的优缺点
@@ -118,24 +106,16 @@ function _instanceof(Fn, inst) {
 
 
 6. 可以描述new一个对象的详细过程，手动实现一个new操作符
-```js
-function _new(Fn, ...args) {
-  const inst = {};
-  inst.__proto__ = Fn.prototype;
-  const res = Fn.call(inst, ...args);
-  return typeof res === 'object' ? res : inst;
-}
-```
 
 
 7. 理解es6 class构造以及继承的底层实现原理
    1. 构造: 构造函数
    1. 继承: 
-   ```js
-   subClass.prototype.__proto__ = superClass.prototype;
-   // 静态方法
-   subClass.__proto__ = superClass;
-   ```
+```js
+subClass.prototype.__proto__ = superClass.prototype;
+// 静态方法
+subClass.__proto__ = superClass;
+```
 
 ## 作用域和闭包
 
@@ -267,8 +247,7 @@ function _new(Fn, ...args) {
 
 
 5. setInterval需要注意的点，使用settimeout实现setInterval
-   - 注意: 多次启动时, 需关闭前一次定时器
-    
+注意: 多次启动时, 需关闭前一次定时器
 ```js
 function _setInterval(fn, timeout = 300) {
   function inner() {
@@ -673,81 +652,9 @@ function deepCopy(object) {
 
 
 3. 手写函数柯里化/偏函数/组合函数 工具函数、并理解其应用场景和优势
-```js
-// 柯里化
-function curry (fn, ...prevArgs) {
-  return function (...args) {
-    const newArgs = [...prevArgs, ...args];
-    // 参数数量不足
-    if (newArgs.length < fn.length) {
-      return curry(fn, ...newArgs);
-    }
-    else {
-      return fn(...newArgs);
-    }
-  };
-}
-
-function toCurryLog (a, b, c) {
-  console.log(`${a},${b},${c}`);
-}
-
-const curryLog = curry(toCurryLog);
-curryLog(1)(2, 3);
-
-// 偏函数
-function partial (fn, ...prevArgs) {
-  return function (...args) {
-    const newArgs = [...prevArgs, ...args];
-    return fn(...newArgs);
-  };
-}
-
-function toPartialLog (a, b, c) {
-  console.log(`${a},${b},${c}`);
-}
-
-const partialLog = partial(toPartialLog, 1, 2);
-partialLog(3);
-
-// 组合
-function compose (...fns) {
-  return (value) => {
-    return fns.reduceRight((prev, fn) => fn(prev), value);
-  };
-}
-
-var toUpperCase = function (x) { return x.toUpperCase(); };
-var exclaim = function (x) { return x + '!'; };
-var shout = compose(exclaim, toUpperCase);
-shout('send in the clowns');
-```
 
 
 4. 手写防抖和节流工具函数、并理解其内部原理和应用场景
-```js
-// 防抖: 多次调用, 运行1次
-function debounce (fn, timeout = 300) {
-  return function (...args) {
-    clearTimeout(fn._tid);
-    fn._tid = setTimeout(() => {
-      fn.call(this, ...args);
-    }, timeout);
-  };
-}
-
-// 节流: 多次调用, 每个时间间隔运行1次
-function throttle (fn, timeout = 300) {
-  let start = Date.now();
-  return function (...args) {
-    const now = Date.now();
-    if (now - start >= timeout) {
-      fn.call(this, ...args);
-      start = now;
-    }
-  };
-}
-```
 
 
 5. 实现一个sleep函数
@@ -768,42 +675,11 @@ sleep(3000).then(() => {
 
 
 1. 手动实现call、apply、bind
-```js
-Function.prototype._call = function(context, ...args) {
-  context = context || window;
-  context._fn = this;
-  const res = context._fn(...args);
-  delete context._fn;
-  return res;
-}
-Function.prototype._bind = function(context, ...args) {
-  const fn = this;
-  return function F(...curArgs) {
-    // 构造函数调用
-    if(this instanceof F) {
-      return new fn(...args, ...curArgs);
-    }
-    return fn.call(context, ...args, ...curArgs);
-  }
-}
-```
 
-2. 手动实现符合Promise/A+规范的Promise、手动实现async await //todo
-```js
-class _Promise {
-  constructor(init) {
-  
-  }
-}
-```
+2. 手动实现符合Promise/A+规范的Promise、手动实现async await
 
 
 3. 手写一个EventEmitter实现事件发布、订阅
-```js
-class EventEmitter {
-  
-}
-```
 
 
 4. 可以说出两种实现双向绑定的方案、可以手动实现
