--- a/前端自检.md
+++ b/前端自检.md
@@ -97,9 +97,44 @@
 
 4. 实现继承的几种方式以及他们的优缺点
    1. 原型链继承
-   1. 构造函数继承
+      1. 优点
+         1. 可复用父类原型属性
+      1. 缺点
+         1. 创建子类无法传参
+   1. 借用构造函数
+      1. 优点
+         1. 创建子类可以传参
+      1. 缺点
+         1. 无法复用父类原型属性
    1. 组合继承
-   1. extends
+      1. 优点
+         1. 可复用父类原型属性
+         1. 创建子类可以传参
+      1. 缺点
+         1. 调用了两次父类构造函数, 存在一份多余的父类实例属性
+   1. 组合继承优化
+      > 完美方案
+```js
+// 原型链继承
+Child.prototype = new Parent();
+
+// 借用构造函数
+function Child(...args) {
+  Parent.call(this, ...args);
+}
+
+// 组合继承
+function Child(...args) {
+  Parent.call(this, ...args);
+}
+Child.prototype = new Parent();
+
+// 组合继承优化
+function Child(...args) {
+  Parent.call(this, ...args);
+}
+Child.prototype = Object.create(Parent.prototype);
+```
 
 
 5. 至少说出一种开源项目(如Node)中应用原型继承的案例
@@ -112,9 +147,9 @@
    1. 构造: 构造函数
    1. 继承: 
 ```js
-subClass.prototype.__proto__ = superClass.prototype;
+Child.prototype.__proto__ = Parent.prototype;
 // 静态方法
-subClass.__proto__ = superClass;
+Child.__proto__ = Parent;
 ```
 
 ## 作用域和闭包
@@ -173,8 +208,8 @@ subClass.__proto__ = superClass;
 
 
 7. 如何处理循环的异步操作
-   1. await
-   1. 递归
+   1. 循环中await
+   1. 递归: 上一个异步完成后, 调用下一个
 
 
 8. 理解模块化解决的实际问题，可列举几个模块化方案并理解其中原理
@@ -192,7 +227,6 @@ subClass.__proto__ = superClass;
 
 1. 为何try里面放return，finally还会执行，理解其内部机制
    1. try里面的代码报错的时候,catch里面的代码才会执行,finally里面的代码永远会执行
-   1. catch和finally里面,正常的代码会从上到下顺序执行
    1. 如果只是catch里面代码出错,则报catch里面的错误
    1. 如果catch和finally都出错则会报finally里面的错误
 
