--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -105,6 +105,7 @@ window.globalVar = 1;
 var globalVar2 = 1;
 (function () {
   const localVar = 1;
+  let localVar2 = 1;
   if (1) {
     const blockVar = 1;
     if (1) {
