--- a/前端自检.md
+++ b/前端自检.md
@@ -448,7 +448,7 @@ function _setInterval(fn, timeout = 300) {
 
 
 4. base64的编码原理
-   1. 每3个字符为一组, 占24位
+   1. 每3个字节为一组, 占24位
    1. 将24位分成4组, 每组占6位
    1. 每组前加2个0, 得到一个数
    1. Base64编码对照表, 将数字映射为字符
@@ -593,9 +593,91 @@ function _setInterval(fn, timeout = 300) {
 
 
 1. 熟练使用前端常用的设计模式编写代码，如单例模式、装饰器模式、代理模式等
+   1. 构造函数
+   1. 工厂
+   1. 模块
+   1. 混合(组合继承)
    1. 单例
+   1. 发布/订阅: 如EventEmitter
    1. 观察者
-   1. 发布/订阅
+```js
+// 构造函数
+function Animal (name) {
+  this.name = name;
+  this.getName = function () {
+    return this.name;
+  };
+}
+var cat = new Animal('cat');
+
+// 工厂
+function Animal (name) {
+  const inst = {};
+  inst.name = name;
+  inst.getName = function () {
+    return inst.name;
+  };
+  return inst;
+}
+var cat = Animal('cat');
+
+// 模块
+var cat = (function () {
+  const name = 'cat';
+  function getName () {
+    return name;
+  }
+  return {
+    name,
+    getName,
+  };
+})();
+
+// 单例
+const CatSingle = (function () {
+  let inst;
+
+  function init () {
+    return {};
+  }
+
+  return {
+    getInst: function () {
+      return inst || (inst = init());
+    },
+  };
+})();
+var cat = CatSingle.getInst();
+
+// 观察者
+class Subject {
+  constructor () {
+    this.observers = [];
+  }
+  add (observer) {
+    this.observers.push(observer);
+  }
+  notify () {
+    this.observers.forEach(observer => observer.update());
+  }
+}
+
+class Observer {
+  constructor (name) {
+    this.name = name;
+  }
+  update () {
+    console.log(`目标更新: ${this.name}`);
+  }
+}
+
+let sub = new Subject();
+let ob = new Observer('haha');
+// 添加观察者
+sub.add(ob);
+// 通知更新
+sub.notify();
+```
 
 
 2. 发布订阅模式和观察者模式的异同以及实际应用
