--- a/前端自检.md
+++ b/前端自检.md
@@ -661,7 +661,6 @@ class Subject {
     this.observers.forEach(observer => observer.update());
   }
 }
-
 class Observer {
   constructor (name) {
     this.name = name;
@@ -670,7 +669,6 @@ class Observer {
     console.log(`目标更新: ${this.name}`);
   }
 }
-
 let sub = new Subject();
 let ob = new Observer('haha');
 // 添加观察者
@@ -833,9 +831,7 @@ sleep(3000).then(() => {
 1. 可计算一个算法的时间复杂度和空间复杂度，可估计业务逻辑代码的耗时和内存消耗
 
 
-2. 至少理解五种排序算法的实现原理、应用场景、优缺点，可快速说出时间、空间复杂度 //todo
-   1. 选择
-   1. 快速
+2. 至少理解五种排序算法的实现原理、应用场景、优缺点，可快速说出时间、空间复杂度
 
 
 3. 了解递归和循环的优缺点、应用场景、并可在开发中熟练应用
@@ -921,8 +917,6 @@ sleep(3000).then(() => {
 
 
 5. 浏览器如何解析CSS规则，并将其应用到DOM树上
-   1. 选择器从右到左
-   1. 样式叠加或覆盖
 
 
 6. 浏览器如何将解析好的带有样式的DOM树进行绘制
