--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -451,7 +451,7 @@ class EventEmitter {
          - 转义字符
       1. 存储型: 恶意脚本保存到数据库中
          - 服务端转义字符
-      > 输入内容限制, cookie: http only
+      > csp, 输入内容限制, cookie: http only
    1. CSRF
       1. token
       1. referer
@@ -844,7 +844,10 @@ function mergeSortHelper (left, right) {
 - TypeScript
 - WebAssembly
 - 跨端开发: Flutter, React Native, uni-app/Taro
+- 微前端
+- 前端智能化
 
+- [从微前端到智能化：2020前端开源技术趋势](https://juejin.im/post/5e55ed5fe51d4526c148131c)
 - [2019年前端大事件回顾：流年笑掷，未来可期](https://juejin.im/post/5def782ce51d4558181d27ce)
 - [2020年大前端发展趋势](https://juejin.im/post/5ddb487ce51d452349622d7f)
 
