--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -26,6 +26,16 @@
    1. flex-flow: flex-wrap, flex-direction
    2. flex: flex-grow, flex-shrink: 0(不缩小), flex-basis
    - [flex布局教程](http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html)
+- flex分别有哪些方法用于容器和项目
+   1. 容器
+      1. flex-flow (flex-direction, flex-wrap)
+      1. align-items
+      1. justify-content
+      1. align-content: 多轴时有效
+   1. 项目
+      1. flex (flex-grow, flex-shrink, flex-basis)
+      1. align-self
+      1. order
 - BFC
    - 触发条件
       1. 根元素
@@ -42,7 +52,7 @@
    1. translateZ(0)等3D属性
    1. will-change: all
 - 选择器优先级
-   1. 优先级: !import > id > class > tag > * > inherit > useragent
+   1. 优先级: !important > id > class > tag > * > inherit > useragent
    1. 位置: 行内 > 内联 > 外部 > @import;
 - CSS动画
    1. transition
@@ -65,19 +75,9 @@ getComputedStyle(el).getPropertyValue('--color');
 el.style.setProperty('--color', '#fff');
 ```
 - 清除浮动
-   1. 添加clear: both; 额外标签
-   1. overflow: hidden;
+   1. 额外标签 + clear: both
+   1. overflow: hidden
    1. :after + clear: both
-- flex分别有哪些方法用于容器和项目
-   1. 容器
-      1. flex-flow (flex-direction, flex-wrap)
-      1. align-items
-      1. justify-content
-      1. align-content: 多轴时有效
-   1. 项目
-      1. flex (flex-grow, flex-shrink, flex-basis)
-      1. align-self
-      1. order
 - css性能优化
    1. 内联首屏css
    1. 异步加载非首屏css
@@ -128,7 +128,7 @@ var globalVar2 = 1;
 function _new(Fn, ...args) {
   let inst = {};
   inst.__proto__ = Fn.prototype;
-  let res = Fn.apply(inst, args);
+  let res = Fn.call(inst, ...args);
   // 构造函数如显示返回对象, 结果取该值, 否则取inst
   return res instanceof Object ? res : inst;
 }
@@ -219,13 +219,129 @@ function throttle (fn, timeout = 300) {
 - Promise, async/await
    - [Promise开发文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 - 设计模式
-   1. 原型模式
-   1. 构造函数模式
-   1. 混合模式
-   1. 模块模式
-   1. 单例模式
-   1. 观察者模式
-   1. 发布/订阅模式
+   1. 构造函数
+   1. 工厂
+   1. 模块
+   1. 混合(组合继承)
+   1. 单例
+   1. 发布/订阅: 如EventEmitter
+   1. 观察者
+```js
+// 构造函数
+function Animal (name) {
+  this.name = name;
+  this.getName = function () {
+    return this.name;
+  };
+}
+var cat = new Animal('cat');
+
+// 工厂
+function Animal (name) {
+  const inst = {};
+  inst.name = name;
+  inst.getName = function () {
+    return inst.name;
+  };
+  return inst;
+}
+var cat = Animal('cat');
+
+// 模块
+var cat = (function () {
+  const name = 'cat';
+  function getName () {
+    return name;
+  }
+  return {
+    name,
+    getName,
+  };
+})();
+
+// 单例
+const CatSingle = (function () {
+  let inst;
+
+  function init () {
+    return {};
+  }
+
+  return {
+    getInst: function () {
+      return inst || (inst = init());
+    },
+  };
+})();
+var cat = CatSingle.getInst();
+
+// 观察者
+class Subject {
+  constructor () {
+    this.observers = [];
+  }
+  add (observer) {
+    this.observers.push(observer);
+  }
+  notify () {
+    this.observers.forEach(observer => observer.update());
+  }
+}
+class Observer {
+  constructor (name) {
+    this.name = name;
+  }
+  update () {
+    console.log(`目标更新: ${this.name}`);
+  }
+}
+let sub = new Subject();
+let ob = new Observer('haha');
+// 添加观察者
+sub.add(ob);
+// 通知更新
+sub.notify();
+```
+- 实现继承的几种方式以及他们的优缺点
+   1. 原型链继承
+      1. 优点
+         1. 可复用父类原型属性
+      1. 缺点
+         1. 创建子类无法传参
+   1. 借用构造函数
+      1. 优点
+         1. 创建子类可以传参
+      1. 缺点
+         1. 无法复用父类原型属性
+   1. 组合继承
+      1. 优点
+         1. 可复用父类原型属性
+         1. 创建子类可以传参
+      1. 缺点
+         1. 调用了两次父类构造函数, 存在一份多余的父类实例属性
+   1. 组合继承优化
+      > 完美方案
+```js
+// 原型链继承
+Child.prototype = new Parent();
+
+// 借用构造函数
+function Child(...args) {
+  Parent.call(this, ...args);
+}
+
+// 组合继承
+function Child(...args) {
+  Parent.call(this, ...args);
+}
+Child.prototype = new Parent();
+
+// 组合继承优化
+function Child(...args) {
+  Parent.call(this, ...args);
+}
+Child.prototype = Object.create(Parent.prototype);
+```
 - 编译原理
    1. 词法分析
    1. 语法解析 -> AST
@@ -259,6 +375,7 @@ Function.prototype._call = function(context, ...args) {
   return res;
 }
 Function.prototype._bind = function(context, ...prevArgs) {
+  context = context || window;
   const fn = this;
   return function F(...args) {
     const newArgs = [...prevArgs, ...args];
@@ -403,7 +520,7 @@ class EventEmitter {
       1. 使用requestAnimationFrame, requestIdleCallback重新渲染
       1. 样式在head, 脚本在body结束前, 防止阻塞
       1. 简化和优化css选择器, 减少嵌套
-   1. 性能
+   1. 代码性能
       1. css放头部, js放脚部
       1. 避免css import
       1. 阻塞渲染的css/js合理拆分延迟加载
@@ -435,7 +552,7 @@ class EventEmitter {
    1. 解决阻塞: 采用异步, 合理的超时策略
    1. 数据库优化: 分表分库, 建立索引, 分布式部署, 读写分离
    1. 使用CDN
-   1. 负载均衡: 软硬件四层交换
+   1. 使用负载均衡
    1. 图片服务器分离: 图片耗服务器资源
    1. 使用分布式集群
    1. 页面静态化
