--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -777,8 +777,10 @@ ref | 字符 | createRef(类), useRef(函数)
    1. url参数
    1. 小程序存储数据
 - template
-   1. <import src="xxx.wxml" />
-   1. <tempate is="xxx" />
+```html
+<import src="xxx.wxml" />
+<tempate is="xxx" />
+```
 - app生命周期
    1. onLaunch
    1. onShow
