--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -605,6 +605,7 @@ class EventEmitter {
    ![iamge](./images/timestamp-diagram.svg)
    - Unload
    1. Redirect
+   1. AppCache
    1. DNS
    1. TCP
    1. Request
