--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -622,6 +622,30 @@ class EventEmitter {
    1. 动态分发和复制
    1. 缓存
    > CDN网络是在用户和服务器之间增加Cache层，主要是通过接管DNS实现，将用户的请求引导到Cache上获得源服务器的数据，从而降低网络的访问的速度。
+- 单元测试
+   1. 主流框架
+      1. karma
+      1. mocha
+      1. jest
+   1. 断言库
+      1. assert
+      1. expect.js
+      1. should.js
+      1. chai
+   - [前端单元测试那些事](https://juejin.im/post/5e2405146fb9a02fea37366c)
+- jest
+   > 集成断言库
+   1. jest.config.js
+      1. testMatch: 测试用例文件
+      1. transform: vue-jest -> .vue, babel-jest -> .js
+      1. moduleNameMapper: 支持源代码中相同的 @ -> src 别名
+      1. coverageDirectory: 覆盖率报告目录
+      1. collectCoverageFrom: 测试报告覆盖的文件, !排除文件
+   1. 覆盖率
+      1. 语句覆盖率
+      1. 分支覆盖率
+      1. 函数覆盖率
+      1. 行覆盖率
    
 ## 移动端
 - 移动端与PC端区别
