feat: async/await

--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -398,6 +398,55 @@ new _Promise((resolve, reject) => {
 ```
    - [Promise开发文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 - async/await
+```js
+// 借助Generator来实现async/await
+function run (gen) {
+  return new Promise((resolve, reject) => {
+    const g = gen();
+
+    function step (value) {
+      let res;
+      try {
+        res = g.next(value);
+      }
+      catch (e) {
+        return reject(e);
+      }
+
+      if (res.done) {
+        return res.value;
+      }
+
+      Promise.resolve(res.value).then(
+        (value) => {
+          step(value);
+        },
+        (error) => {
+          g.throw(error);
+        },
+      );
+    }
+
+    step();
+  });
+}
+
+function* generator2 () {
+  try {
+    console.log(yield new Promise((resolve) => {
+      setTimeout(() => {
+        resolve(1);
+      }, 1000);
+    }));
+    console.log(yield 2);   //2
+    console.log(yield Promise.reject('error'));
+  }
+  catch (error) {
+    console.log(error);
+  }
+}
+run(generator2);
+```
 - 设计模式
    1. 构造函数
    1. 工厂
