feat: 浏览器引擎

--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -399,7 +399,7 @@ new _Promise((resolve, reject) => {
    - [Promise开发文档](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 - async/await
 ```js
-// 借助Generator来实现async/await
+// 借助Generator/Promise来实现async/await
 function run (gen) {
   return new Promise((resolve, reject) => {
     const g = gen();
@@ -982,13 +982,12 @@ ref | 字符 | createRef(类), useRef(函数)
    - [深入理解浏览器的缓存机制](https://www.jianshu.com/p/54cc04190252)
 - 浏览器组成
    1. 用户界面: 地址栏, 前进后退按钮等
-   1. 浏览器引擎: 提供渲染引擎高级接口
+   1. 浏览器引擎: 用户界面与渲染引擎之间传送指令
    1. 渲染引擎: 将URI可视化展示
-      1. 网络
+      1. 网络: 完成网络调用
       1. js解释器
-      1. xml解析器
-      1. 显示后端
-   1. 数据持久层: cookie, 证书, 缓存等
+      1. UI后端: 绘制对话框等
+   1. 数据持久层: cookie, 缓存等
    - [浏览器的组成部分及运行原理](https://www.jianshu.com/p/e4a75cb6f268)
 - 输入URL到渲染过程
    1. DNS解析: 域名解析为IP
@@ -1010,6 +1009,25 @@ ref | 字符 | createRef(类), useRef(函数)
       1. render树 -> 绘制渲染所有节点
       - [浏览器渲染原理与过程](https://www.jianshu.com/p/e6252dc9be32)
    - [浏览器从输入URL到渲染完页面的整个过程](https://www.cnblogs.com/qing-5/p/11126524.html)
+- [浏览器进程与线程](https://segmentfault.com/a/1190000013083967)
+   1. GUI渲染线程
+   1. JS引擎线程
+   1. 事件线程
+   1. 定时器线程
+   1. http请求线程
+   - WebWorker
+   - SharedWorker
+- 渲染引擎
+   1. Trident: 旧IE
+   1. Edge: 新IE
+   1. Gecko: Firefox
+   1. Webkit: safari, 旧chrome
+   1. Blink: chrome28+
+- JS引擎
+   1. JScript: IE
+   1. SpiderMonkey: Firefox
+   1. V8: chrome
+   1. JavascriptCore: safari
 
 - [你不知道的浏览器页面渲染机制](https://juejin.im/post/5ca0c0abe51d4553a942c17d)
 
