--- a/前端自检.md
+++ b/前端自检.md
@@ -1371,3 +1371,11 @@ server
 
 
 3. 可以将自己的想法或新技术在业务中落地实践，尽量在团队中拥有一定的不可替代性
+
+
+## 其他
+
+- 面向对象三大特征
+   1. 封装: 隐藏对象的属性和细节, 仅公开接口, 形成"类"
+   1. 继承: 子类继承父类的特征和行为
+   1. 多态: 继承, 重写, 父类引用指向子类对象
