--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -875,6 +875,24 @@ class EventEmitter {
       1. 分支覆盖率
       1. 函数覆盖率
       1. 行覆盖率
+- GET/POST区别
+   1. GET
+      1. 请求数据, 用于取回数据
+      1. 可被缓存
+      1. 保存在浏览器历史记录中
+      1. 可被收藏为书签
+      1. 不宜处理敏感数据, 因为参数在url中明文传递
+      1. 上传数据长度: 限制为4KB, 类型: 只允许ASCII字符
+      1. 后退/刷新 无害
+      1. 编码类型: application/x-www-form-urlencoded
+   1. POST
+      1. 用于提交数据
+      1. 数据可在请求主体中发送
+      1. 不会保存在浏览器历史记录中
+      1. 不能被收藏为书签
+      1. 上传数据长度/类型: 无限制
+      1. 后退/刷新 数据可能会重新提交
+      1. 编码类型: application/x-www-form-urlencoded, multipart/form-data, application/json等
    
 ## 移动端
 - 移动端与PC端区别
