--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -13,8 +13,8 @@
    1. content
    > content不包含其他部分, IE为border-box
 - 水平垂直居中
-   1. text-align: center, line-height
-   1. table-cell
+   1. text-align: center; line-height
+   1. table-cell, text-align: center; vertical-align: center;
    1. flex, justify-content: center; align-items: center;
    1. absolute, left: 50%; top: 50%; 负margin
    1. absolute, left: 50%; top: 50%; translate(-50%,-50%)
@@ -627,7 +627,7 @@ function curry (fn, ...prevArgs) {
       return curry(fn, ...newArgs);
     }
     else {
-      return fn(...newArgs);
+      return fn.call(this, ...newArgs);
     }
   };
 }
@@ -643,7 +643,7 @@ curryLog(1)(2, 3);
 function partial (fn, ...prevArgs) {
   return function (...args) {
     const newArgs = [...prevArgs, ...args];
-    return fn(...newArgs);
+    return fn.call(this, ...newArgs);
   };
 }
 
@@ -797,11 +797,12 @@ class EventEmitter {
          - 转义字符
       1. 存储型: 恶意脚本保存到数据库中
          - 服务端转义字符
-      > csp, 输入内容限制, cookie: http only
+         - 输入内容限制
+      > csp, cookie: http only
    1. CSRF
       1. token
-      1. referer
       1. 验证码
+      1. referer
       1. cookie samesite
          1. none(默认)
          1. lax: form GET发送, form POST,iframe,ajax,image.src不发送
@@ -850,7 +851,7 @@ class EventEmitter {
    1. 负载均衡
    1. 动态分发和复制
    1. 缓存
-   > CDN网络是在用户和服务器之间增加Cache层，主要是通过接管DNS实现，将用户的请求引导到Cache上获得源服务器的数据，从而降低网络的访问的速度。
+   > CDN网络是在用户和服务器之间增加Cache层，主要是通过接管DNS实现，将用户的请求引导到Cache上获得源服务器的数据，加快网络的访问的速度。
 - 单元测试
    1. 主流框架
       1. karma
@@ -1252,7 +1253,7 @@ function mergeSortHelper (left, right) {
 - TypeScript
 - WebAssembly
 - 跨端开发: Flutter, React Native, uni-app/Taro
-- 微前端
+- 微前端: qiankun
 - 前端智能化
 
 - [从微前端到智能化：2020前端开源技术趋势](https://juejin.im/post/5e55ed5fe51d4526c148131c)
