--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -832,7 +832,7 @@ class EventEmitter {
    2. 资源加载: performance.getEntriesByType('resource')
    - [5 分钟撸一个前端性能监控工具](https://juejin.im/post/5b7a50c0e51d4538af60d995)
 - Timing
-   ![iamge](./images/timestamp-diagram.svg)
+   ![iamge](./images/timing.png)
    - Unload
    1. Redirect
    1. AppCache
@@ -842,6 +842,43 @@ class EventEmitter {
    1. Response
    - DOM
    - Load
+- FPS
+   1. 开发者工具 - More tools - Rendering - FPS meter
+   1. Frame Timing API: 兼容性不佳
+   1. requestAnimationFrame API: 正常而言 requestAnimationFrame 这个方法在1S内会执行 60 次, 每1S执行次数相当于动画帧率
+```js
+// Frame Timing API
+const observer = new PerformanceObserver(function(list) {
+  const perfEntries = list.getEntries();
+  for (let i = 0; i < perfEntries.length; i++) {
+    console.log('FPS', perfEntries[i]);
+  }
+});
+observer.observe({entryTypes: ['frame']});
+
+// requestAnimationFrame
+let frame = 0;
+let lastTime = performance.now();
+const timeSpan = 2000;
+
+function loop () {
+  const now = performance.now();
+
+  frame++;
+
+  if (now >= timeSpan + lastTime) {
+    const fps = Math.round(frame / (now - lastTime) * 1000);
+    console.log(`${Date.now()} FPS: ${fps}`);
+
+    frame = 0;
+    lastTime = now;
+  }
+
+  requestAnimationFrame(loop);
+}
+
+loop();
+```
 - WebWorker
 - ServiceWorker
    1. 注册ServiceWorker
