--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -846,6 +846,7 @@ class EventEmitter {
    1. 开发者工具 - More tools - Rendering - FPS meter
    1. Frame Timing API: 兼容性不佳
    1. requestAnimationFrame API: 正常而言 requestAnimationFrame 这个方法在1S内会执行 60 次, 每1S执行次数相当于动画帧率
+   - [【前端性能】Web 动画帧率（FPS）计算](https://www.cnblogs.com/coco1s/p/8029582.html)
 ```js
 // Frame Timing API
 const observer = new PerformanceObserver(function(list) {
