--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -798,7 +798,7 @@ class EventEmitter {
       1. 存储型: 恶意脚本保存到数据库中
          - 服务端转义字符
          - 输入内容限制
-      > csp, cookie: http only
+      > Content-Security-Policy, cookie: http only
    1. CSRF
       1. token
       1. 验证码
@@ -808,6 +808,18 @@ class EventEmitter {
          1. lax: form GET发送, form POST,iframe,ajax,image.src不发送
          1. strict: 完全不发送
    - [必须要懂的Web安全](https://juejin.im/post/5cd6ad7a51882568d3670a8e)
+   - [X-Frame-Options](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/X-Frame-Options): deny | sameorigin | allow-from https://example.com/(大多不支持)
+   - [X-Content-Type-Options](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/X-Content-Type-Options): nosniff
+      1. 要求浏览器按content-type类型渲染
+      1. nosniff请求将阻止: "style" MIME 类型不是 "text/css, "script" MIME 类型不是  JavaScript MIME 类型
+      > 例如一个网站允许用户上传图片到文章中，攻击者在上传图片的时候，用图片文件结尾，实则是个含有JavaScript的脚本文件。该文件逃过了文件类型校验，其他用户在访问这个文章的时候，浏览器会去请求这个伪装成图片的JavaScript脚本，而此时如果浏览器错误的推断了这个响应的内容类型（MIME types），那么就会把这个图片文件当做JavaScript脚本执行，于是攻击也就成功了。
+   - [Content-Security-Policy](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/Content-Security-Policy)
+      1. 通过使用 CSP 禁用嵌入式 JavaScript，您可以有效消除针对您站点的几乎所有XSS攻击。
+      1. Content-Security-Policy: default-src 'self'; img-src *; media-src media1.com media2.com; script-src userscripts.example.com
+   - [Strict-Transport-Security/HSTS](https://developer.mozilla.org/zh-CN/docs/Security/HTTP_Strict_Transport_Security)
+      1. 设置在浏览器收到这个请求后的<expire-time>秒的时间内凡是访问这个域名下的请求都使用HTTPS请求。
+   - (兼容性差)[X-XSS-Protection](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/X-XSS-Protection): 1; mode=block
+      1. 仅IE/safari支持
 - 打包工具
    1. gulp
    1. rollup
