--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -820,6 +820,7 @@ class EventEmitter {
       1. 设置在浏览器收到这个请求后的<expire-time>秒的时间内凡是访问这个域名下的请求都使用HTTPS请求。
    - (兼容性差)[X-XSS-Protection](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/X-XSS-Protection): 1; mode=block
       1. 仅IE/safari支持
+   - opener: window.opener会指向源页面的window对象; 尽量不使用target="_blank"，如果一定要用，需要加上rel="noopener"
 - 打包工具
    1. gulp
    1. rollup
@@ -1208,6 +1209,8 @@ ref | 字符 | createRef(类), useRef(函数)
 - 反转链表
 - 合并两个有序链表
 - 二叉树的最大深度
+- 求斐波拉契数
+- 搜索旋转排序数组
 - [上LeetCode刷题吧](https://leetcode-cn.com/problemset/all/): 一般只考简单,中等难度
 ```js
 // 冒泡排序
