--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -53,7 +53,8 @@
    1. will-change: all
 - 选择器优先级
    1. 优先级: !important > id > class > tag > * > inherit > useragent
-   1. 位置: 行内 > 内联 > 外部 > @import;
+   1. 位置: 行内 > 内联 > link > @import;
+   - [CSS导入方式——link和@import](https://blog.csdn.net/Luanzh19871223/article/details/80976221)
 - CSS动画
    1. transition
    1. animation/keyframes
@@ -1151,6 +1152,7 @@ ref | 字符 | createRef(类), useRef(函数)
    1. 头部压缩: 静态字典, 动态字典
    1. 服务器推送: index.html可推送index.css, 减少通信次数
    - [HTTP2简介](https://juejin.im/post/5aaccf8f51882555784dbabc)
+   - [一文读懂 HTTP/2 及 HTTP/3 特性](https://blog.fundebug.com/2019/03/07/understand-http2-and-http3/)
 - HTTPS握手过程
    1. client hello: 支持的SSL版本和加密组件列表(加密算法及密钥长度等)
    2. server hello: 选择的SSL版本和加密组件; 并发送证书(含服务器公钥); hello done
