--- a/前端面试高频问题.md
+++ b/前端面试高频问题.md
@@ -822,6 +822,7 @@ class EventEmitter {
    - (兼容性差)[X-XSS-Protection](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Headers/X-XSS-Protection): 1; mode=block
       1. 仅IE/safari支持
    - opener: window.opener会指向源页面的window对象; 尽量不使用target="_blank"，如果一定要用，需要加上rel="noopener"
+   - [cookie samesite](https://www.ruanyifeng.com/blog/2019/09/cookie-samesite.html)
 - 打包工具
    1. gulp
    1. rollup
@@ -1194,6 +1195,18 @@ ref | 字符 | createRef(类), useRef(函数)
 - [TCP拥塞控制机制](https://blog.csdn.net/shuxnhs/article/details/80644531)
    1. 慢启动: 指数增长
    1. 拥塞避免: 线性增长, 关小拥塞窗口
+- HTTP3(QUIC)
+   1. 0 RTT(往返时延: round-trip time)
+      1. TCP握手
+      1. TLS握手
+   1. 多路复用
+      1. 丢包时不存在TCP队头阻塞
+      1. 通过ID识别连接, 对移动端多变的网络环境更友好(TCP基于IP和端口)
+   1. 加密认证的报文
+   1. 向前纠错机制
+      1. 在少量丢包时, 通过其他包的冗余数据组装, 无须重传
+- 队头阻塞
+   > 当顺序发送的请求序列中的一个请求因为某种原因被阻塞时，在后面排队的所有请求也一并被阻塞，会导致客户端迟迟收不到数据
 - 讲述一下计算机网络的七层
    1. 应用层
    1. 表示层
